# RustDBGen

./: .env  .gitignore  Cargo.toml  README.md  progress.md  refinement.md  schema.model.toml  test_schema.rs  type_map.toml
backend/: Cargo.toml
backend/src/: main.rs
migrations/: 20250705082223_finance_app_initial.down.sql  20250705082223_finance_app_initial.up.sql
models/: account.toml  budget.toml  category.toml  goal.toml  recurring_transaction.toml  transaction.toml  user.toml
src/: ir.rs  lib.rs  main.rs
src/codegen/: app_main.rs  auth.rs  cargo_toml.rs  config.rs  executor.rs  handlers.rs  handlers_enhanced.rs  main_server.rs  main_server_enhanced.rs  mod.rs  models.rs  pagination.rs  permissions.rs  router.rs  routes.rs
tests/: backend.rs  connect.rs  db_apply.rs  db_constraint.rs  db_data_migration.rs  db_introspection.rs  db_rename.rs  db_seed.rs  db_unique.rs  generate.rs  include.rs  lint.rs  macros.rs  migration.rs  migration_diff.rs  plugin.rs  registry.rs  seed.rs
web/: README.md  editor.html
