[package]
name = "finance-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
jsonwebtoken = "9.0"
axum-extra = { version = "0.9", features = ["typed-header"] }
argon2 = "0.5"
password-hash = { version = "0.5", features = ["rand_core"] }
rust_decimal = { version = "1.0", features = ["serde"] }
dotenvy = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "rust_decimal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
